--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,18 @@
 <body>
   <app-root></app-root>
 </body>
+
+<footer>
+  <!--<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBqsvI4AWS5n1ipMCbyq2CWsX6-xxrIg8&callback=init"> 
+  </script>-->
+  <script src="http://roberto140717.ddns.net:3000/socket.io/socket.io.js"></script>
+  <script>
+    var URL = 'roberto140717.ddns.net:3000'
+    var imei_global = "00000000000"
+
+    var socket = io.connect(URL, {'forceNew':true
+    
+    });
+  </script>
+</footer>
 </html>
